[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tangles"
version = "0.1.0"
description = "Implementation of the tangles algorithm as described in https://arxiv.org/abs/2006.14444."
authors = ["Solveig Klepper <solveig.klepper@uni-tuebingen.de>", "Alexander Conzelmann <lexan@kabelbw.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Conzel/tangles"

keywords = ["machine learning", "clustering", "unsupervised", "algorithms"]

# Requirements
[dependencies]
python = "^3.9"
matplotlib = "3.1.3"
numpy = "1.20.1"
pandas = "1.2.2"
scikit-learn = "0.24.1"
scipy = "1.6.1"
networkx = "2.5"
bitarray = "1.6.3"
seaborn = "0.11.1"
pydot = "1.4.2"
graphviz = "0.16"
